Closed
Bug 148399
Opened 24 years ago
Closed 23 years ago
Text (link) incorrectly flows or disappears
Categories
(Core :: Layout, defect, P2)
Core
Layout
Tracking
()
VERIFIED
FIXED
mozilla1.0.1
People
(Reporter: thomas.swan, Assigned: karnaze)
References
()
Details
(4 keywords, Whiteboard: [Hixie-P2] [Trunk Only])
Attachments
(7 files, 1 obsolete file)
Upon horizontal resize the phrase introductory tuturials in the left table cell
either overlaps tutorials or the word introductory disappears altogether. I'm
including 3 screenshots and the current source of the page to demonstrate the
problem.
Reproduceable using win32 nightly trunk build 2002053104. I haven't checked
earlier builds yet.
| Reporter | ||
Comment 1•24 years ago
|
||
| Reporter | ||
Comment 2•24 years ago
|
||
| Reporter | ||
Comment 3•24 years ago
|
||
| Reporter | ||
Comment 4•24 years ago
|
||
Comment 5•24 years ago
|
||
WFM Build 2002052306 win95
unable to reproduce.
Comment 6•24 years ago
|
||
I see this with linux trunk build 2002053008, but not 2002052808.
marking NEW.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Windows 2000 → All
Comment 7•24 years ago
|
||
Comment 8•24 years ago
|
||
backing out bug 145305 fixes this
==> karnaze
Assignee: attinasi → karnaze
Keywords: regression
Comment 9•24 years ago
|
||
*** Bug 148640 has been marked as a duplicate of this bug. ***
Updated•24 years ago
|
QA Contact: petersen → amar
Updated•24 years ago
|
Priority: -- → P2
Comment 10•24 years ago
|
||
*** Bug 149181 has been marked as a duplicate of this bug. ***
Comment 11•24 years ago
|
||
*** Bug 149579 has been marked as a duplicate of this bug. ***
Comment 12•24 years ago
|
||
*** Bug 149617 has been marked as a duplicate of this bug. ***
Comment 13•24 years ago
|
||
*** Bug 149595 has been marked as a duplicate of this bug. ***
Comment 14•24 years ago
|
||
Bugs 149597 and 149598 are dupes of this too I think
Comment 15•24 years ago
|
||
*** Bug 149598 has been marked as a duplicate of this bug. ***
Comment 17•24 years ago
|
||
Bug 149364 could be a duplicate of this bug.
Comment 18•24 years ago
|
||
Simon has a point here, this seems related. Can someone please track down when
exactly this bug here appeared?
Bug 149364 was tracked down (by myself) to not appear in
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.0.0+) Gecko/2002052809
but to appear 23 hours later:
Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.0.0+) Gecko/2002052908
Adding keyword mozilla1.1 and going to major, simple text not appearing or
illegible is a serious issue IMHO.
pi
Severity: normal → major
Keywords: mozilla1.1
Comment 19•24 years ago
|
||
I have not seen this bug without a table and bug 149364 does not have one
this bug was caused by checkin for bug 145305, which was checked in at:
05/28/2002 15:50 (which is consistent with bug 149364).
Comment 20•24 years ago
|
||
I think this should be a Mozilla 1.1 blocker, since it has so many dupes.
Whiteboard: [Hixie-P2]
Comment 21•24 years ago
|
||
Adding waterson. Perhaps involved in the 129115 rewrite?
Doesn't comment 8 say what caused this?
Comment 23•24 years ago
|
||
*** Bug 149242 has been marked as a duplicate of this bug. ***
Comment 24•24 years ago
|
||
*** Bug 150008 has been marked as a duplicate of this bug. ***
Comment 25•24 years ago
|
||
*** Bug 148312 has been marked as a duplicate of this bug. ***
| Assignee | ||
Updated•24 years ago
|
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.0.1
| Assignee | ||
Comment 26•24 years ago
|
||
This is a similar test without a table. Either (1) load the test in viewer and
make the window narrower until the layout is messed up or (2) load the test in
viewer, make viewer as narrow as possible, reload the test, and then make
viewer a bit wider. The latter method ensures things get messed up during the
very next resize. In either case once the layout is messed up, making the
viewport wider does not correct it.
| Assignee | ||
Comment 27•24 years ago
|
||
The testcases are still a problem on a 5/27 build (before bug 145305 was checked
in), so I'm not convinced that bug 145305 caused this (especially after spending
a lot of time looking at that patch and putting back any change that looked
suspect).
Comment 28•24 years ago
|
||
I'll test backing out the patch again, but I'm 100% certain that I was unable to
reproduce the bug with build 2002052808 using similar steps as you describe --
making the window smaller and *then* wider was much more consistent than just
resizing it to be small.
I don't think I had 20020527 to test -- perhaps it regressed earlier, covered up
for 20020528 and then uncovered by bug 145305???
Comment 29•24 years ago
|
||
Both testcases exhibit the bug with 20020609, neither testcase exhibits the bug
with 2002052808 or 2002052507. I'll try some intermediate builds.
What was the time (hour) on the 20020527 build you tested with?
| Assignee | ||
Comment 30•24 years ago
|
||
Andrew, sorry for the extra work, it was my mistake. I didn't realize that my
5/27 build had the changes in bug 145305 before it was checked in.
| Assignee | ||
Comment 31•24 years ago
|
||
The patch puts 2 checks for NS_FRAME_COMPLETE the way they were before bug
145305 was applied and fixes a mistake where | was used instead of &.
Comment 32•24 years ago
|
||
Comment on attachment 87374 [details] [diff] [review]
patch to fix the bug
r= alexsavulov
Attachment #87374 -
Flags: review+
Comment 33•24 years ago
|
||
Comment on attachment 87374 [details] [diff] [review]
patch to fix the bug
sr=kin@netscape.com
Why add the not equals 0 comparison instead of just changing the '|' to an '&'?
- (state | NS_FRAME_OUT_OF_FLOW)) {
+ (0 != (state & NS_FRAME_OUT_OF_FLOW))) {
Attachment #87374 -
Flags: superreview+
Comment 34•24 years ago
|
||
*** Bug 151535 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 35•24 years ago
|
||
Attachment #87374 -
Attachment is obsolete: true
| Assignee | ||
Updated•24 years ago
|
Attachment #87677 -
Flags: superreview+
Attachment #87677 -
Flags: review+
Comment 36•24 years ago
|
||
*** Bug 151764 has been marked as a duplicate of this bug. ***
| Assignee | ||
Comment 37•24 years ago
|
||
The patch is now on the trunk.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Comment 38•24 years ago
|
||
*** Bug 151884 has been marked as a duplicate of this bug. ***
Comment 39•24 years ago
|
||
*** Bug 151275 has been marked as a duplicate of this bug. ***
Comment 40•24 years ago
|
||
*** Bug 151725 has been marked as a duplicate of this bug. ***
Comment 41•24 years ago
|
||
Why is this not a dupe of bug 138742?
Comment 42•24 years ago
|
||
Sorry, I don't know how to link to the bug numbers, but I think this was
probably the same problem as #151525 which is now fixed for me in the 20020615
linux nightly (sea). Groovy!
Comment 43•24 years ago
|
||
*** Bug 149780 has been marked as a duplicate of this bug. ***
Comment 44•24 years ago
|
||
*** Bug 151525 has been marked as a duplicate of this bug. ***
Comment 45•24 years ago
|
||
*** Bug 151861 has been marked as a duplicate of this bug. ***
Comment 46•24 years ago
|
||
*** Bug 152262 has been marked as a duplicate of this bug. ***
Comment 48•24 years ago
|
||
*** Bug 152554 has been marked as a duplicate of this bug. ***
Comment 49•24 years ago
|
||
*** Bug 153040 has been marked as a duplicate of this bug. ***
Comment 50•24 years ago
|
||
*** Bug 153335 has been marked as a duplicate of this bug. ***
Comment 51•24 years ago
|
||
*** Bug 153310 has been marked as a duplicate of this bug. ***
Comment 52•24 years ago
|
||
*** Bug 152855 has been marked as a duplicate of this bug. ***
Comment 53•24 years ago
|
||
*** Bug 152424 has been marked as a duplicate of this bug. ***
Comment 54•24 years ago
|
||
*** Bug 153463 has been marked as a duplicate of this bug. ***
Comment 55•24 years ago
|
||
*** Bug 153571 has been marked as a duplicate of this bug. ***
Comment 56•24 years ago
|
||
*** Bug 154107 has been marked as a duplicate of this bug. ***
Comment 57•24 years ago
|
||
*** Bug 154828 has been marked as a duplicate of this bug. ***
Comment 58•24 years ago
|
||
*** Bug 154980 has been marked as a duplicate of this bug. ***
Comment 59•24 years ago
|
||
*** Bug 155462 has been marked as a duplicate of this bug. ***
Comment 60•24 years ago
|
||
*** Bug 156707 has been marked as a duplicate of this bug. ***
Comment 61•24 years ago
|
||
*** Bug 156867 has been marked as a duplicate of this bug. ***
Comment 62•24 years ago
|
||
*** Bug 156890 has been marked as a duplicate of this bug. ***
Comment 63•23 years ago
|
||
*** Bug 157162 has been marked as a duplicate of this bug. ***
Comment 64•23 years ago
|
||
Reopening this bug.
On newest trunks (2002070304) links are very badly handled.
Sometimes links which should be breaked aren't appear at all, and somtimes (like
at now on http://mozillapl.org on the left) they overlay tables.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 65•23 years ago
|
||
Zbigniew, that doesn't necessarily look like the same problem originally
reported by this bug. Please open a new bug about that, as that testcase will
most assuredly need minimization to determine what the problem is.
Status: REOPENED → RESOLVED
Closed: 24 years ago → 23 years ago
Resolution: --- → FIXED
Comment 66•23 years ago
|
||
You're probably right.
I filled bug 157281 .
Comment 67•23 years ago
|
||
I agree with Zbigniew Braniecki Im still seeing over laping text (2002053012)
Where there is too much text about. IE and Opera Don't do this ever.
Comment 68•23 years ago
|
||
Alex, please file a new bug showing an example of that behavior.
Comment 69•23 years ago
|
||
You have an example in bug 157281 and in bug 107200.
Comment 70•23 years ago
|
||
*** Bug 157528 has been marked as a duplicate of this bug. ***
Comment 71•23 years ago
|
||
*** Bug 148969 has been marked as a duplicate of this bug. ***
Comment 72•23 years ago
|
||
*** Bug 158070 has been marked as a duplicate of this bug. ***
Comment 73•23 years ago
|
||
*** Bug 156545 has been marked as a duplicate of this bug. ***
Comment 74•23 years ago
|
||
*** Bug 149778 has been marked as a duplicate of this bug. ***
Comment 75•23 years ago
|
||
Let's get this on the branch please since it affects MSDN and Slashdot, and many
other sites.
Comment 76•23 years ago
|
||
amar: can you pls verify this as fixed on the trunk, so that we can evaluate
taking on the 1.0 branch. If it is fixed with no known regressions, pls change
Reolved/Fixed to Resolved/Verified. thanks!
Comment 77•23 years ago
|
||
I do not see the problem with trunk build: 2002-08-01-08. I think this problem
is only on trunk. It could not reproduce it on 2002-08-01-08-branch.
I went back to check this problem on old builds. I could reproduce this bug
with 2002-06-09-08-trunk but not with 2002-06-09-09-branch.
But anyway verifying this bug as resolved-fixed on trunk.
Comment 78•23 years ago
|
||
Marking as verified per Comment #77 From Amarendra Hanumanula.
[Note: This does not appear to be a problem on the branch according to Amar.
Adding *Trunk Only* to the status whiteboard].
Whiteboard: [ADT2 RTM] [Hixie-P2] [ETA 08/02] [needs verification by QA] → [ADT2 RTM] [Hixie-P2] [Trunk Only]
Comment 79•23 years ago
|
||
the regression here was caused by bug 145305, which was never checked into the
branch. therefore it won't occur on the branch.
Updated•23 years ago
|
Whiteboard: [ADT2 RTM] [Hixie-P2] [Trunk Only] → [Hixie-P2] [Trunk Only]
You need to log in
before you can comment on or make changes to this bug.
Description
•